Fixed OAuth news demo to have live configuration by default.

--- a/demos/oauth/news/.htaccess
+++ b/demos/oauth/news/.htaccess
@@ -6,4 +6,4 @@ RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L]
 RewriteRule ^previews/([0-9]{1,4}).*$ previews.php?article=$1 [L,QSA]
 RewriteRule ^buy/([0-9]{1,4}).*$ buy.php?article=$1 [L,QSA]
 RewriteRule ^articles/([0-9]{1,4}).*$ articles.php?article=$1 [L,QSA]
-RewriteRule ^$ /payswarm.com/demos/oauth/news/previews/1 [R=permanent]
+RewriteRule ^$ /demos/oauth/news/previews/1 [R=permanent]
