Added lots of documentation to the commerce vocab. Moved payswarm vocab items over to the commerce vocab.

--- a/vocabs/.htaccess
+++ b/vocabs/.htaccess
@@ -1,4 +1,4 @@
-<FilesMatch "(commerce|payswarm)">
+<FilesMatch "(commerce|payswarm|creditcard|signature)">
    ForceType text/html
    SetHandler default_handler
 </FilesMatch>
