Enabling SOPA banner.

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
-DirectoryIndex index-sopa.xhtml
+DirectoryIndex index-sopa.xhtml index.xhtml index.php
 
 RewriteEngine on
 RewriteCond %{HTTP_USER_AGENT} .*MSIE.*
 RewriteCond %{REQUEST_URI} \.xhtml$
 RewriteRule .* - [T=text/html]
+
