--- a/specs/source/.htaccess
+++ b/specs/source/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
+RewriteBase /specs/source/
 RewriteRule ^(.*)web-keys(.*)$ $1secure-messaging$2 [L,R]
 RewriteRule ^(.*)http-keys(.*)$ $1secure-messaging$2 [L,R]
