Reformatting join page to match new Bootstrap 3 theme.

--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,8 @@ RewriteRule .* - [T=text/html]
 <Files "intro">
   Options MultiViews
 </Files>
+
+<Files "thanks">
+  Options MultiViews
+</Files>
+
