--- a/.htaccess
+++ b/.htaccess
@@ -3,15 +3,6 @@ RewriteCond %{HTTP_USER_AGENT} .*MSIE.*
 RewriteCond %{REQUEST_URI} \.xhtml$
 RewriteRule .* - [T=text/html]
 
-<Files "join">
-  Options MultiViews
-</Files>
-
-<Files "intro">
-  Options MultiViews
-</Files>
-
-<Files "thanks">
-  Options MultiViews
-</Files>
+RewriteCond $1 join|intro|thanks
+RewriteRule ^(join|intro|thanks)$ $1.php [L]
 
